# test_twitter

./: .gitignore  Makefile  README.md  compose-dev.yaml  compose-test.yaml  compose.yaml  env_example.md  pyproject.toml
app/: Dockerfile  requirements.txt
app/src/: alembic.ini  conftest.py  entrypoint.sh  fill.py  main.py  start_celery.sh
app/src/alembic/: env.py
app/src/alembic/versions/: 2024_02_06_14_22-0e71bcd1b477_users.py  2024_02_06_15_24-85ec469f2794_subscriptions.py  2024_02_06_17_12-43d5b6479d01_posts.py  2024_02_06_21_31-fc90eefc84e4_feeds.py  2024_02_07_13_05-be3c14821f3a_post_id_in_feed.py  2024_02_07_15_59-e0f141362e35_ondelete_user_id_cascade.py  2024_02_08_11_06-6d93990e4ff9_initial.py  2024_02_08_14_02-8742ef8b8a70_initial.py
app/src/api/: healtcheck.py
app/src/api/v1/: posts.py  subscriptions.py  users.py
app/src/background/: regular.py  tasks.py
app/src/config/: celery.py
app/src/core/: config.py
app/src/db/: red_conn.py  schemas.py  sqlalcem.py
app/src/errors/: base.py
app/src/models/: pagination.py  posts.py  read.py  subscriptions.py  users.py
app/src/partition/: partitioning.py
app/src/services/: feed_service.py  post_service.py  subscription_service.py  user_service.py
app/src/tests/: test_main.py  utils.py
app/src/tests/test_data/: data.py
celery/: config
db/: 01-init.sh
dump/: test_data.dump  test_data.dump.REMOVED.git-id
