[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["egor nikitin <eanikitin90gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
alembic = "1.12.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
asyncpg = "0.28.0"
orjson = "3.8.7"
redis = "4.4.4"
gunicorn = "21.2.0"
uvicorn = "0.12.2"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
